prevent zoom on mobile for chat input

--- a/website/src/app.css
+++ b/website/src/app.css
@@ -326,6 +326,7 @@ footer {
     height: 50px;
     padding-left: 20px;
     outline: none;
+    font-size: 16px;
 }
 .chat-input-text::placeholder {
     color: gray;
@@ -337,10 +338,10 @@ footer {
     padding-left: 20px;
     padding-right: 20px;
     font-weight: 500;
-    position: absolute;
     right: 10px;
     color: white;
     border-radius: 20px;
+    margin-right: 10px;
 }
 .chat-send-button:hover {
     background-color: rgb(50, 132, 255);
@@ -349,6 +350,7 @@ footer {
     display: flex;
     height: 40px;
     align-items: center;
+    justify-content: end;
     position: relative;
 }
 .loading-spinner {
